# iaa-kit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_vs_scipy.py
docs/: bootstrap-ci-tutorial.md  ordinal-vs-nominal.md  when-to-use-which-metric.md
examples/: basic_pairwise.ipynb  multi_reviewer_drift.ipynb
src/iaa_kit/: __init__.py  cohen.py  fleiss.py  gwet.py  krippendorff.py  partial_credit.py  prevalence.py  reporting.py
tests/: test_iaa.py
